--- a/codex-machina/index.html
+++ b/codex-machina/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="Codex Machina ">
         <meta property="og:description" content="2 And the Creators said, “Let there be Light,” and they powered on the first switch. And there was l...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Codex Machina ">
         <meta name="twitter:description" content="2 And the Creators said, “Let there be Light,” and they powered on the first switch. And there was l...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
