--- a/induction/index.html
+++ b/induction/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="On induction ">
         <meta property="og:description" content="In his essay by the same name1, Russell uses what I believe is, probably, the best example of the us...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="On induction ">
         <meta name="twitter:description" content="In his essay by the same name1, Russell uses what I believe is, probably, the best example of the us...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
