--- a/information-loss/index.html
+++ b/information-loss/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="Information loss in speech across languages">
         <meta property="og:description" content="It is evident to anyone exposed to different languages that not all languages are spoken at the same...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Information loss in speech across languages">
         <meta name="twitter:description" content="It is evident to anyone exposed to different languages that not all languages are spoken at the same...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
