--- a/owned-by-all/index.html
+++ b/owned-by-all/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="Owned by no one, or owned by all?">
         <meta property="og:description" content="Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of ...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Owned by no one, or owned by all?">
         <meta name="twitter:description" content="Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of ...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
