--- a/speciesism/index.html
+++ b/speciesism/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="On speciesism ">
         <meta property="og:description" content="There has been a growing trend over the last half-century or so This topic raises three key question...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="On speciesism ">
         <meta name="twitter:description" content="There has been a growing trend over the last half-century or so This topic raises three key question...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
