--- a/spheres/index.html
+++ b/spheres/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="Floating metal spheres ">
         <meta property="og:description" content="For some reason, while coming back from a trip abroad a couple of weeks ago I started to think about...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Floating metal spheres ">
         <meta name="twitter:description" content="For some reason, while coming back from a trip abroad a couple of weeks ago I started to think about...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
