--- a/day-night/index.html
+++ b/day-night/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="Day and night in the Creation">
         <meta property="og:description" content="Much has been said about how there can be ‘day’ and ‘night’ during the Creation if the sun wasn't cr...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Day and night in the Creation">
         <meta name="twitter:description" content="Much has been said about how there can be ‘day’ and ‘night’ during the Creation if the sun wasn't cr...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
