--- a/punishing-pollution/index.html
+++ b/punishing-pollution/index.html
@@ -14,14 +14,14 @@
 
         <meta property="og:title" content="Punishing an illicit activity, or the activity that facilitates it?">
         <meta property="og:description" content="I was reading Hot Money, by Naomi Klein. There, the   If policymakers extend liability to fossil-fue...">
-        <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Punishing an illicit activity, or the activity that facilitates it?">
         <meta name="twitter:description" content="I was reading Hot Money, by Naomi Klein. There, the   If policymakers extend liability to fossil-fue...">
-        <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
+        <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
         <link rel="canonical" href="https://rivas-alvaro.github.io/">
