--- a/information-loss/index.html
+++ b/information-loss/index.html
@@ -74,7 +74,7 @@
 
 <p>Psycholinguists frame this as intelligibility under masking noise or lexical deletion, a property that can be measured experimentally<sup class='footnote-number'><a href='#footnote-2'>2</a></sup>.</p>
 
-<p>My limited knowledge of languages – I only speak three, insignificant compared to the number of languages spoken worlwide – doesn’t allow me to have a good overall idea of where languages stand on this. However, I suspect that English is well-placed in this regard. At least compared to Spanish, English is more robust to mishearing individual words</p>
+<p>My limited knowledge of languages – I only speak three, insignificant compared to the number of languages spoken worlwide – doesn’t allow me to have a good overall idea of where languages stand on this. However, I suspect that English is well-placed in this regard. At least compared to Spanish, English is more robust to mishearing individual words.</p>
 
 <p>When part of the sentence is mispronounced or hasn’t been heard properly, it is usually individual words that are dropped. The habit of adding information about subject, action, tense etc to the verb in Spanish makes understanding the sentence more difficult when a word is dropped as a consequence of not understanding it. Consider for example the sentences</p>
 
@@ -107,8 +107,8 @@
 <p>Typologists have linked such “information packaging” differences to morphological type: analytic languages like English distribute grammatical categories across separate words, while fusional languages like Spanish compress them<sup class='footnote-number'><a href='#footnote-3'>3</a></sup>.</p>
 
 <p>Taken together, these observations suggest that while languages equalise average information rate, they vary in their robustness to information loss, like lexical deletion.</p><h3>Notes</h3>
-<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> Coupé, Christophe, et al., <i>Different languages, similar encoding efficiency: Comparable information rates across the human communicative niche</i> (Science advances 5.9: eaaw2594, 2019).</p>
-<p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> See for example C. Connine, C. Clifton and A. Cutler, <i>Effects of lexical stress on phonetic categorization</i> (Phonetica, 44(3): 133-146, 1987).</p>
+<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> Coupé, Christophe, et al., “Different languages, similar encoding efficiency: Comparable information rates across the human communicative niche” (<i>Science advances</i> 5.9: eaaw2594, 2019).</p>
+<p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> See for example C. Connine, C. Clifton and A. Cutler, “Effects of lexical stress on phonetic categorization” (<i>Phonetica, 44</i>(3): 133-146, 1987).</p>
 <p id='footnote-3'><sup class='footnote-number'><a href='#footnote-3'>3</a></sup> P. Trudgill, <i>Sociolinguistic Typology: Social Determinants of Linguistic Complexity</i> (Oxford University Press, 2011).</p>
 
             </section>
