--- a/maximal-rights/index.html
+++ b/maximal-rights/index.html
@@ -315,7 +315,7 @@ and
 <p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 266.</p>
 <p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> G. A. Cohen, <i>Self-ownership, freedom and equality</i>, p. 213f.</p>
 <p id='footnote-3'><sup class='footnote-number'><a href='#footnote-3'>3</a></sup> Ibid., p. 215.</p>
-<p id='footnote-4'><sup class='footnote-number'><a href='#footnote-4'>4</a></sup> A. M. Honoré, <i>Ownership</i>.</p>
+<p id='footnote-4'><sup class='footnote-number'><a href='#footnote-4'>4</a></sup> A. M. Honoré, “Ownership”.</p>
 <p id='footnote-5'><sup class='footnote-number'><a href='#footnote-5'>5</a></sup> J. Waldron, <i>The Right to Private Property</i>, p. 27.</p>
 <p id='footnote-6'><sup class='footnote-number'><a href='#footnote-6'>6</a></sup> These assumptions are implicitly made by Rawls in his use of “most” in “most extensive total system of [...] liberties” (J. Rawls, <i>A Theory of Justice</i>, p. 266). The term “most” assumes that such a system of liberties is more extensive than, and therefore comparable to, any other such systems of liberties. The term also assumes that there is only one system that is more extensive than any other: there cannot be multiple <i>most</i> extensive systems of liberties. Similarly, Cohen stated that it is possible to identify a set of rights \(S\) every person may have over themselves, such that “\(S\) confers fuller rights over herself than any other set [...] does.” (G. A. Cohen, <i>Self-ownership, freedom and equality</i>, p. 213f). He therefore claims that such a set of rights can be compared to any other logically possible, universal set of self-ownership rights. He also claimed that the universality and logical possibility constraints mean “only one set of rights survives, with which self-ownership can then be (uniquely) identified. (ibid., p. 213)”</p>
 <p id='footnote-7'><sup class='footnote-number'><a href='#footnote-7'>7</a></sup> However, the arguments and results from this article also apply to other alternative definitions of rights.</p>
@@ -326,8 +326,8 @@ and
 <p id='footnote-12'><sup class='footnote-number'><a href='#footnote-12'>12</a></sup> Ibid., p. 40.</p>
 <p id='footnote-13'><sup class='footnote-number'><a href='#footnote-13'>13</a></sup> Ibid., p. 26.</p>
 <p id='footnote-14'><sup class='footnote-number'><a href='#footnote-14'>14</a></sup> See, for example, S. Roman, <i>Lattices and ordered sets</i>, p. 2ff, for a formal definition of partially ordered sets and their properties.</p>
-<p id='footnote-15'><sup class='footnote-number'><a href='#footnote-15'>15</a></sup> O. O'Neill, <i>The most extensive liberty</i>, p. 52.</p>
-<p id='footnote-16'><sup class='footnote-number'><a href='#footnote-16'>16</a></sup> M. Zorn, <i>A remark on method in transfinite algebra</i>, p. 667.</p>
+<p id='footnote-15'><sup class='footnote-number'><a href='#footnote-15'>15</a></sup> O. O'Neill, “The most extensive liberty”, p. 52.</p>
+<p id='footnote-16'><sup class='footnote-number'><a href='#footnote-16'>16</a></sup> M. Zorn, “A remark on method in transfinite algebra”, p. 667.</p>
 <p id='footnote-17'><sup class='footnote-number'><a href='#footnote-17'>17</a></sup> A subset \(\mathcal P'\subset \mathcal P\) is said to be a chain if \(\mathcal P'\) is totally ordered with respect to the order relation inherited from \(\mathcal P\). See, for example, S. Roman, <i>Lattices and ordered sets</i>, pp. 6f.</p>
 <p id='footnote-18'><sup class='footnote-number'><a href='#footnote-18'>18</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 266.</p>
 <p id='footnote-19'><sup class='footnote-number'><a href='#footnote-19'>19</a></sup> Ibid., p. 6.</p>
@@ -336,13 +336,13 @@ and
 <p id='footnote-22'><sup class='footnote-number'><a href='#footnote-22'>22</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 54.</p>
 <p id='footnote-23'><sup class='footnote-number'><a href='#footnote-23'>23</a></sup> Ibid., p. 53.</p>
 <p id='footnote-24'><sup class='footnote-number'><a href='#footnote-24'>24</a></sup> Ibid., p. 54.</p>
-<p id='footnote-25'><sup class='footnote-number'><a href='#footnote-25'>25</a></sup> See H.L.A. Hart, <i>Rawls on Liberty and Its Priority</i> for a critical view of Rawls's basic liberties and his principle of greatest equal liberty. For example, he points out in p. 541 that some “important forms of liberty” such as “sexual freedom and liberty to use alcohol or drugs” are not among the basic liberties listed by Rawls.</p>
+<p id='footnote-25'><sup class='footnote-number'><a href='#footnote-25'>25</a></sup> See H.L.A. Hart, “Rawls on Liberty and Its Priority”} for a critical view of Rawls's basic liberties and his principle of greatest equal liberty. For example, he points out in p. 541 that some “important forms of liberty” such as “sexual freedom and liberty to use alcohol or drugs” are not among the basic liberties listed by Rawls.</p>
 <p id='footnote-26'><sup class='footnote-number'><a href='#footnote-26'>26</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 54.</p>
 <p id='footnote-27'><sup class='footnote-number'><a href='#footnote-27'>27</a></sup> Rawls, in his subsequent work <i>Political Liberalism</i>, redefines his first principle again. After the amendment, it states that “each person has an equal right to a <i>fully adequate</i> scheme of equal basic liberties which is compatible with a similar scheme of liberties for all” (p. 291, italics mine). This further restricts the kind of liberties he considers. The amendment does not, however, get rid of conflicts among liberties.</p>
 <p id='footnote-28'><sup class='footnote-number'><a href='#footnote-28'>28</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 178.</p>
-<p id='footnote-29'><sup class='footnote-number'><a href='#footnote-29'>29</a></sup> H.L.A. Hart, <i>Rawls on Liberty and Its Priority</i>, p. 543.</p>
+<p id='footnote-29'><sup class='footnote-number'><a href='#footnote-29'>29</a></sup> H.L.A. Hart, “Rawls on Liberty and Its Priority”, p. 543.</p>
 <p id='footnote-30'><sup class='footnote-number'><a href='#footnote-30'>30</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 178.</p>
-<p id='footnote-31'><sup class='footnote-number'><a href='#footnote-31'>31</a></sup> H.L.A. Hart, <i>Rawls on Liberty and Its Priority</i>, p. 543.</p>
+<p id='footnote-31'><sup class='footnote-number'><a href='#footnote-31'>31</a></sup> H.L.A. Hart, “Rawls on Liberty and Its Priority”, p. 543.</p>
 <p id='footnote-32'><sup class='footnote-number'><a href='#footnote-32'>32</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 178.</p>
 <p id='footnote-33'><sup class='footnote-number'><a href='#footnote-33'>33</a></sup> Ibid., p. 266.</p>
 <p id='footnote-34'><sup class='footnote-number'><a href='#footnote-34'>34</a></sup> Ibid., p. 214.</p>
@@ -359,13 +359,13 @@ and
 
 <p><bib-author>R.M. Hare</bib-author>, <i>Moral thinking: Its levels, method, and point</i> (Oxford: Clarendon Press, 1981).</p>
 
-<p><bib-author>H.L.A. Hart</bib-author>, <i>Rawls on Liberty and its Priority</i> (University of Chicago Law Review: Vol. 40: Iss. 3, Article 5, 1973).</p>
+<p><bib-author>H.L.A. Hart</bib-author>, “Rawls on Liberty and its Priority” (<i>University of Chicago Law Review</i>, Vol. 40, Iss. 3, Article 5, 1973).</p>
 
 <p><bib-author>W.N. Hohfeld</bib-author>, <i>Fundamental Legal Conceptions as Applied in Judicial Reasoning</i> (The Lawbook Exchange, 2010).</p>
 
-<p><bib-author>A.M. Honoré</bib-author>, <i>Ownership</i> (Oxford University Press, 1961).</p>
+<p><bib-author>A.M. Honoré</bib-author>, “Ownership” (<i>Oxford University Press</i>, 1961).</p>
 
-<p><bib-author>O. O'Neill</bib-author>, <i>The most extensive liberty</i> (Proceedings of the Aristotelian Society, vol. 80, pp. 45-59, 1979).</p>
+<p><bib-author>O. O'Neill</bib-author>, “The most extensive liberty” (<i>Proceedings of the Aristotelian Society</i>, Vol. 80, pp. 45-59, 1979).</p>
 
 <p><bib-author>J. Rawls</bib-author>, <i>Justice As Fairness</i> (The philosophical review, 67(2), 164-194, 1959).</p>
 
@@ -377,7 +377,7 @@ and
 
 <p><bib-author>J. Waldron</bib-author>, <i>The Right to Private Property</i> (Clarendon Press, 1990).</p>
 
-<p><bib-author>M. Zorn</bib-author>, <i>A remark on method in transfinite algebra</i> (Bulletin of the American Mathematical Society, 1935).</p>
+<p><bib-author>M. Zorn</bib-author>, “A remark on method in transfinite algebra” (<i>Bulletin of the American Mathematical Society</i>, 1935).</p>
 
             </section>
         </main>
