--- a/owned-by-all/index.html
+++ b/owned-by-all/index.html
@@ -79,8 +79,8 @@
 <p>Of these two alternatives, it is the first one that I favour as it leads to a more extensive set of negative rights, even though (perhaps somewhat counterintuitively) it leads to less positive freedom.</p>
 
 <p>Clearly, the fact that humanity exists means that we all have made illegitimate use of the commons, as per the “owned by all” option. Otherwise, humanity wouldn’t have survived. In this case, humanity is condemned to be immoral as long as it wants to survive.</p><h3>Notes</h3>
-<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> A.M. Honoré, <i>Ownership</i> (Oxford University Press, 1961).</p>
-<p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> There are other alternatives, but these must be historically posterior to the two alternatives discussed, see E. Ostrom, <i>Governing the commons: The evolution of institutions for collective action</i> (Cambridge university press, 1990).</p>
+<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> A.M. Honoré, “Ownership” (<i>Oxford University Press</i>, 1961).</p>
+<p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> There are other alternatives, but these must be historically posterior to the two alternatives discussed, see E. Ostrom, <i>Governing the commons: The evolution of institutions for collective action</i> (Cambridge University Press, 1990).</p>
 
             </section>
         </main>
