--- a/politics/index.html
+++ b/politics/index.html
@@ -203,7 +203,7 @@ Politicians and voters might still settle for consequentialist,
 utilitarian arguments for a policy, but they
 should at least be able to justify why deontological considerations
 for or against the policy were dismissed.</p><h3>Notes</h3>
-<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> D. Nolan, <i>Classifying and Analyzing Politico-Economic Systems</i> (The Individualist, 1971).</p>
+<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> D. Nolan, “Classifying and Analyzing Politico-Economic Systems” (<i>The Individualist</i>, 1971).</p>
 <p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> And these <i>prima facie</i> rights are <i>not</i> rights, strictly speaking.</p>
 
             </section>
