--- a/books/index.html
+++ b/books/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Books">
+        <meta property="og:title" content="Books - Alvaro Rivas">
         <meta property="og:description" content="Books">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Books">
+        <meta name="twitter:title" content="Books - Alvaro Rivas">
         <meta name="twitter:description" content="Books">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Books</title>
+        <title>Books - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
     </head>
