--- a/induction/index.html
+++ b/induction/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="On induction ">
+        <meta property="og:title" content="On induction  - Alvaro Rivas">
         <meta property="og:description" content="In his essay by the same name1, Russell uses what I believe is, probably, the best example of the us...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="On induction ">
+        <meta name="twitter:title" content="On induction  - Alvaro Rivas">
         <meta name="twitter:description" content="In his essay by the same name1, Russell uses what I believe is, probably, the best example of the us...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>On induction </title>
+        <title>On induction  - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
     </head>
