--- a/owned-by-all/index.html
+++ b/owned-by-all/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Owned by no one, or owned by all?">
+        <meta property="og:title" content="Owned by no one, or owned by all? - Alvaro Rivas">
         <meta property="og:description" content="Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of ...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Owned by no one, or owned by all?">
+        <meta name="twitter:title" content="Owned by no one, or owned by all? - Alvaro Rivas">
         <meta name="twitter:description" content="Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of ...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Owned by no one, or owned by all?</title>
+        <title>Owned by no one, or owned by all? - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
     </head>
