--- a/punishing-pollution/index.html
+++ b/punishing-pollution/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Punishing an illicit activity, or the activity that facilitates it?">
+        <meta property="og:title" content="Punishing an illicit activity, or the activity that facilitates it? - Alvaro Rivas">
         <meta property="og:description" content="I was reading Hot Money, by Naomi Klein. There, the   If policymakers extend liability to fossil-fue...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Punishing an illicit activity, or the activity that facilitates it?">
+        <meta name="twitter:title" content="Punishing an illicit activity, or the activity that facilitates it? - Alvaro Rivas">
         <meta name="twitter:description" content="I was reading Hot Money, by Naomi Klein. There, the   If policymakers extend liability to fossil-fue...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Punishing an illicit activity, or the activity that facilitates it?</title>
+        <title>Punishing an illicit activity, or the activity that facilitates it? - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
     </head>
