--- a/safeguarding-memories/index.html
+++ b/safeguarding-memories/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Safeguarding memories">
+        <meta property="og:title" content="Safeguarding memories - Alvaro Rivas">
         <meta property="og:description" content="The recent explosion in artificial intelligence, and particularly generative AI, has opened the door...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Safeguarding memories">
+        <meta name="twitter:title" content="Safeguarding memories - Alvaro Rivas">
         <meta name="twitter:description" content="The recent explosion in artificial intelligence, and particularly generative AI, has opened the door...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Safeguarding memories</title>
+        <title>Safeguarding memories - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
     </head>
