--- a/speciesism/index.html
+++ b/speciesism/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="On speciesism ">
+        <meta property="og:title" content="On speciesism  - Alvaro Rivas">
         <meta property="og:description" content="There has been a growing trend over the last half-century or so This topic raises three key question...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="On speciesism ">
+        <meta name="twitter:title" content="On speciesism  - Alvaro Rivas">
         <meta name="twitter:description" content="There has been a growing trend over the last half-century or so This topic raises three key question...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>On speciesism </title>
+        <title>On speciesism  - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
     </head>
