--- a/codex-machina/index.html
+++ b/codex-machina/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Codex Machina ">
+        <meta property="og:title" content="Codex Machina  - Alvaro Rivas">
         <meta property="og:description" content="2 And the Creators said, “Let there be Light,” and they powered on the first switch. And there was l...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Codex Machina ">
+        <meta name="twitter:title" content="Codex Machina  - Alvaro Rivas">
         <meta name="twitter:description" content="2 And the Creators said, “Let there be Light,” and they powered on the first switch. And there was l...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Codex Machina </title>
+        <title>Codex Machina  - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
     </head>
