--- a/maximal-rights/index.html
+++ b/maximal-rights/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="On maximal systems of rights ">
+        <meta property="og:title" content="On maximal systems of rights  - Alvaro Rivas">
         <meta property="og:description" content="What rights persons have is a much debated issue in moral and political philosophy. Many schools of ...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="On maximal systems of rights ">
+        <meta name="twitter:title" content="On maximal systems of rights  - Alvaro Rivas">
         <meta name="twitter:description" content="What rights persons have is a much debated issue in moral and political philosophy. Many schools of ...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>On maximal systems of rights </title>
+        <title>On maximal systems of rights  - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
 <script type="text/javascript" id="MathJax-script" async
