--- a/spheres/index.html
+++ b/spheres/index.html
@@ -12,14 +12,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Floating metal spheres ">
+        <meta property="og:title" content="Floating metal spheres  - Alvaro Rivas">
         <meta property="og:description" content="For some reason, while coming back from a trip abroad a couple of weeks ago I started to think about...">
         <meta property="og:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Floating metal spheres ">
+        <meta name="twitter:title" content="Floating metal spheres  - Alvaro Rivas">
         <meta name="twitter:description" content="For some reason, while coming back from a trip abroad a couple of weeks ago I started to think about...">
         <meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/twitter.png">
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Floating metal spheres </title>
+        <title>Floating metal spheres  - Alvaro Rivas</title>
         <link rel="stylesheet" href="/css/style.css">
         
 <script type="text/javascript" id="MathJax-script" async
